# x402-tools

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  FEATURES.md  LICENSE  README.md  TROUBLESHOOTING.md  coverage.xml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/: CLAUDE.md  smoke-test.sh
.claude/rules/: python.md
.github/workflows/: test.yml
docs/: manual-test-guide.md
specs/: README.md  client.md  server.md  smoke-tests.md
src/: amount.test.ts  amount.ts  error.ts  facilitator.test.ts  facilitator.ts  facilitatorClient.ts  index.ts  output.test.ts  output.ts  schemes.test.ts  schemes.ts  wallet.test.ts  wallet.ts
src/bankofai/: __init__.py
src/bankofai/x402_cli/: __init__.py  _tron_patch.py  cli.py  client_cmd.py  errors.py  output.py  schemes.py  server_cmd.py  wallet.py
src/bankofai/x402_tools/: __init__.py  cli.py  client_cmd.py  output.py  schemes.py  server_cmd.py  wallet.py
src/commands/: client.test.ts  client.ts  server.test.ts  server.ts
tests/: __init__.py  test_errors.py  test_output.py  test_schemes.py  test_tron_patch.py
