[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bankofai-x402-cli"
version = "0.1.0-beta.15"
description = "x402-cli — one-shot BankofAI x402 CLI: serve a 402 payment endpoint, or pay one as a client."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "BankofAI", email = "contact@bankofai.io" }]
keywords = ["x402", "cli", "tron", "evm", "payment", "blockchain"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.11"

dependencies = [
  # BofAI family — pin to current major to avoid silent API drifts (e.g. the
  # TokenRegistry → AssetRegistry rename on the SDK's dev/v2 branch).
  # web3 / tronpy are pulled in via the SDK's [evm,tron] extras so the SDK
  # owns those version ranges (cli code never imports them directly).
  "bankofai-x402[evm,tron]>=0.5.9,<0.6",
  "bankofai-agent-wallet>=2.4,<3",
  # CLI's own runtime stack — only libs that cli source directly imports.
  # Bound major version to defend against breaking bumps.
  "click>=8.1.0,<10",
  "httpx>=0.24.0,<1.0.0",
  "pydantic>=2.0,<3",
  "fastapi>=0.110,<1.0",
  "uvicorn>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "mypy>=1.0",
  "ruff>=0.1.0",
]

[project.scripts]
x402-cli = "bankofai.x402_cli.cli:main"

[project.urls]
Homepage = "https://github.com/BofAI/x402-cli#readme"
Repository = "https://github.com/BofAI/x402-cli.git"
Issues = "https://github.com/BofAI/x402-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/bankofai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Third-party packages that don't ship a py.typed marker. We don't get type
# checking against them, but we don't want CI to drown in 'import-untyped'.
[[tool.mypy.overrides]]
module = ["bankofai.x402", "bankofai.x402.*"]
ignore_missing_imports = true
